--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,15 @@
+image: "ruby:2.3"
+
 test:
   script:
   - apt-get update -qy
   - apt-get install -y nodejs
+  - gem install bundler
+  - bundle install -j $(nproc) --without production
   - bundle install --path /cache
-  - bundle exec rake db:create RAILS_ENV=test
-  - bundle exec rake test
+  - bundle exec rails db:create RAILS_ENV=test
+  - bundle exec rails db:migrate RAILS_ENV=test
+  - bundle exec rake
 
 staging:
   type: deploy
