--- a/config/database.yml
+++ b/config/database.yml
@@ -20,17 +20,19 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: developer
+  username: postgres
+  password: ""
+  host: postgres
 
 development:
   <<: *default
-  database: new_app_development
+  database: rails_template_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: new_app
+  #username: rails_template
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: new_app_test
+  database: rails_template_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: new_app_production
-  username: new_app
-  password: <%= ENV['NEW_APP_DATABASE_PASSWORD'] %>
+  database: rails_template_production
+  username: rails_template
+  password: <%= ENV['RAILS_TEMPLATE_DATABASE_PASSWORD'] %>
