--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,31 @@ variables:
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: ""
 
-test:
-  script:
+before_script:
   - apt-get update -qq && apt-get install -y -qq postgresql postgresql-contrib libpq-dev cmake
   - apt-get install -y nodejs
   - gem install bundler --no-ri --no-rdoc
   - bundle install --path /cache
-  - bundle exec rake db:create RAILS_ENV=test
-  - bundle exec rake
+
+stages:
+  - lint_test
+  - rspec_test
+  - deploy
+
+ruby_lint:
+  stage: lint_test
+  script:
+    - bundle exec rubocop
+haml_lint:
+  stage: lint_test
+  script:
+    - bundle exec haml-lint
+coffe_lint:
+  stage: lint_test
+  script:
+    - bundle exec rake coffeelint
+specs:
+  stage: rspec_test
+  script:
+    - bundle exec rake db:create RAILS_ENV=test
+    - bundle exec rspec
