--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,12 @@ Metrics/PerceivedComplexity:
 Metrics/AbcSize:
   Enabled: false
 
+Metrics/BlockLength:
+  Exclude:
+    - 'Rakefile'
+    - '**/*.rake'
+    - 'spec/**/*.rb'
+
 AllCops:
   Exclude:
     - bin/**/*
