--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ services:
   - postgres:latest
 
 variables:
-  POSTGRES_DB: formsub_test
+  POSTGRES_DB: zaki_test
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: ""
 
