--- a/config/database.yml
+++ b/config/database.yml
@@ -85,4 +85,4 @@ production:
   <<: *default
   database: zaki_production
   username: zaki
-  password: <%= ENV['zaki_DATABASE_PASSWORD'] %>
+  password: <%= ENV['ZAKI_DATABASE_PASSWORD'] %>
