connects to formsub (commitee and trial-case)

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -17,6 +17,8 @@ development:
   sso_provider_url: 'http://localhost:3999'
   stateman_api_key: xxxxx
   stateman_url: 'http://localhost:3021'
+  formsub_api_key: xxxxx
+  formsub_url: 'http://localhost:3032'
   gmail_username:  xxxxx
   gmail_password:  xxxxx
 
@@ -32,5 +34,7 @@ production:
   sso_provider_url: <%= ENV["SSO_PROVIDER_URL"] %>
   stateman_api_key: <%= ENV["STATEMAN_API_KEY"] %>
   stateman_url: <%= ENV["STATEMAN_URL"] %>
+  formsub_api_key: <%= ENV["FORMSUB_API_KEY"] %>
+  formsub_url: <%= ENV["FORMSUB_URL"] %>
   gmail_username:  <%= ENV["GMAIL_USERNAME"] %>
   gmail_password:  <%= ENV["GMAIL_PASSWORD"] %>
