--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -41,4 +41,4 @@ production:
   gmail_username:  <%= ENV["GMAIL_USERNAME"] %>
   gmail_password:  <%= ENV["GMAIL_PASSWORD"] %>
   admin_email: <%= ENV["ADMIN_EMAIL"] %>
-  google_client_id: ENV["GOOGLE_CLIENT_ID"]
+  google_client_id: <%= ENV["GOOGLE_CLIENT_ID"] %>
