--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,14 +42,12 @@ coffe_lint:
 specs:
   stage: rspec_test
   script:
-    - bundle exec rake db:create RAILS_ENV=test
+    - bundle exec rails db:create RAILS_ENV=test
     - bundle exec rspec
   except:
     - tags
 staging_deploy:
   stage: deploy
-  variables:
-    HEROKU_API_KEY: $HEROKU_STAGING_API_KEY
   script:
     - gem install dpl
     - dpl --provider=heroku --app=$HEROKU_STAGING_APP --api-key=$HEROKU_STAGING_API_KEY
@@ -58,10 +56,10 @@ staging_deploy:
 production_deploy:
   stage: deploy
   script:
-  - which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
-  - eval $(ssh-agent -s)
-  - ssh-add <(echo -e “$SSH_PRIVATE_KEY”)
-  - gem install capistrano
-  - cap staging deploy
+    - which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - gem install capistrano capistrano-bundler capistrano-figaro-yml capistrano-rails capistrano-rvm capistrano3-puma
+    - bundle exec cap production deploy
   only:
   - tags
