--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -42,3 +42,4 @@ production:
   gmail_password:  <%= ENV["GMAIL_PASSWORD"] %>
   admin_email: <%= ENV["ADMIN_EMAIL"] %>
   google_client_id: <%= ENV["GOOGLE_CLIENT_ID"] %>
+  rollbar_token: <%= ENV["ROLLBAR_ACCESS_TOKEN"] %>
